--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -2,6 +2,7 @@
     margin: 0 auto;
   }
   .navbar-collapse {
+    padding-top: 10px;
     background-color: #c2d4ddde;
     margin: 0 auto;
     justify-content: center;
