--- a/src/Components/SearchResults/style.css
+++ b/src/Components/SearchResults/style.css
@@ -1,4 +1,9 @@
+.result{
+    padding-top: 10px;
+}
+
 .movieName {
+    color: black;
     display: inline-block
 }
 
@@ -7,5 +12,6 @@
 }
 
 ul {
-    list-style-type: none
+    list-style-type: none;
+    font-size: 14px;
 }
