--- a/src/Components/Form/style.css
+++ b/src/Components/Form/style.css
@@ -8,6 +8,7 @@
     width: 100%;
   }
   .container-fluid {
+    padding-top: 10px;
     background-color: #c2d4ddde;
     padding-bottom: 10px;
   }
