--- a/src/Components/Hero/style.css
+++ b/src/Components/Hero/style.css
@@ -1,5 +1,6 @@
 .hero {
-  height: 1100px;
+  height: 100vh;
+  width: 100%;
   background-size: cover;
   background-position: center;
   position: relative;
